chore: version catalog publishing